[gd_scene load_steps=6 format=3 uid="uid://cn35wxc5r0ofy"]

[ext_resource type="LabelSettings" uid="uid://dlgw7vfyxawxl" path="res://assets/label_settings/GL_48_White.tres" id="1_4duem"]
[ext_resource type="Script" path="res://hud/hud.gd" id="1_86ih0"]
[ext_resource type="Texture2D" uid="uid://sskbq56hk7sj" path="res://assets/items/pixel heart 2.png" id="2_ruyw8"]
[ext_resource type="LabelSettings" uid="uid://bsblxmyqypc2e" path="res://assets/label_settings/LG_64_Blue.tres" id="3_1urws"]
[ext_resource type="LabelSettings" uid="uid://da1od3uvbukrl" path="res://assets/label_settings/LG_24_Subtitle.tres" id="4_8qtwb"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86ih0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0000"
label_settings = ExtResource("1_4duem")

[node name="HeartsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_ruyw8")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_ruyw8")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_ruyw8")
stretch_mode = 5

[node name="L4" type="TextureRect" parent="MarginContainer/HBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_ruyw8")
stretch_mode = 5

[node name="L5" type="TextureRect" parent="MarginContainer/HBoxContainer/HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_ruyw8")
stretch_mode = 5

[node name="EndScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.00392157, 0.0980392, 0.745098)

[node name="LevelComplete" type="VBoxContainer" parent="EndScreen"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EndScreen/LevelComplete"]
layout_mode = 2
text = "LEVEL COMPLETE!"
label_settings = ExtResource("3_1urws")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="EndScreen/LevelComplete"]
layout_mode = 2
text = "Press jump for next level"
label_settings = ExtResource("4_8qtwb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="VBoxContainer" parent="EndScreen"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EndScreen/GameOver"]
layout_mode = 2
text = "GAME OVER!"
label_settings = ExtResource("3_1urws")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="EndScreen/GameOver"]
layout_mode = 2
text = "Press jump for main menu"
label_settings = ExtResource("4_8qtwb")
horizontal_alignment = 1
vertical_alignment = 1
